--- a/PlaylistPresentationServeur/.settings/org.eclipse.wst.common.component
+++ b/PlaylistPresentationServeur/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="PlaylistPresentationServeur">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
         <property name="context-root" value="PlaylistPresentationServeur"/>
         <property name="java-output-path" value="/PlaylistPresentationServeur/build/classes"/>
     </wb-module>
