--- a/PlaylistPresentationServeur/WebContent/myCSS.css
+++ b/PlaylistPresentationServeur/WebContent/myCSS.css
@@ -14,6 +14,23 @@ Login page
 	margin: 0px;
 	text-rendering: optimizelegibility;
 }
+.myBtn {
+	border-radius:0px;
+	width: 80px;
+}
+
+.blue {
+  color: white;
+  text-shadow: none;
+  background-color: #4d90fe;
+
+  
+}
+
+.blue:hover {
+  background-color: #0161fd;
+  color: white;
+}
 
 .heading-2 {
 	font-size: 20px;
@@ -90,11 +107,13 @@ Login page
 }
 
 .login .content .form-title {
+  width: 500px;
   font-weight: 300;
   margin-bottom: 25px;
 }
 
 .login .content .form-actions {
+  margin-bottom: 15px;
   background-color: transparent;
   clear: both;
   border: 0px;
@@ -122,6 +141,7 @@ Login page
 }
 
 .login .content .form-actions .btn {
+  margin-right: 15px;
   margin-top: 1px;
 }
 
@@ -2060,3 +2080,486 @@ Landscape phone to portrait tablet
   src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v10/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2'), url(http://fonts.gstatic.com/s/opensans/v10/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
 }
   
+  
+.m-btn {
+  position: relative;
+  display: inline-block;
+  overflow: visible;
+  margin: 0;
+  padding: 10px 14px;   
+  margin-top: 8px;   
+  cursor: pointer;
+  outline: none;
+  border: none; 
+  background-color: #eeeeee;
+  background-image: -moz-linear-gradient(top, #eeeeee, #eeeeee);
+  background-image: -ms-linear-gradient(top, #eeeeee, #eeeeee);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#eeeeee));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #eeeeee);
+  background-image: -o-linear-gradient(top, #eeeeee, #eeeeee);
+  background-image: linear-gradient(top, #eeeeee, #eeeeee);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#eeeeee', GradientType=0);
+  -webkit-background-clip: padding;
+  -moz-background-clip: padding;
+  background-clip: padding;
+  /* IE hacks */
+
+  zoom: 1;
+  z-index: 1;
+  *display: inline;
+  font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  color: #333333;
+  min-width: 42px;
+  
+  text-shadow: #ffffff 0 1px 0;	 
+  text-align: center;  
+  text-decoration: none;
+  white-space: nowrap;
+  
+  vertical-align: inherit;
+}
+.m-btn:hover,
+.m-btn:focus,
+.m-btn:active,
+.m-btn.active {
+  color: #333;
+  text-decoration: none;  
+  background-color: #dcdcdc;
+  background-image: -moz-linear-gradient(top, #dcdcdc, #dcdcdc);
+  background-image: -ms-linear-gradient(top, #dcdcdc, #dcdcdc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dcdcdc), to(#dcdcdc));
+  background-image: -webkit-linear-gradient(top, #dcdcdc, #dcdcdc);
+  background-image: -o-linear-gradient(top, #dcdcdc, #dcdcdc);
+  background-image: linear-gradient(top, #dcdcdc, #dcdcdc);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dcdcdc', endColorstr='#dcdcdc', GradientType=0); 
+  z-index: 100;
+  outline: none;
+}
+.m-btn:active, .m-btn.active {
+  background-color: #eeeeee;
+  background-image: -moz-linear-gradient(top, #eeeeee, #dcdcdc);
+  background-image: -ms-linear-gradient(top, #eeeeee, #dcdcdc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#dcdcdc));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #dcdcdc);
+  background-image: -o-linear-gradient(top, #eeeeee, #dcdcdc);
+  background-image: linear-gradient(top, #eeeeee, #dcdcdc);
+  background-repeat: repeat-x;
+   -webkit-box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dcdcdc', GradientType=0); 
+}
+.m-btn:focus {
+  /* Blue border on button focus. */
+  border-color: #4D90FE;
+}
+/* overrides extra padding on button elements in Firefox */
+.m-btn::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+.m-btn.red-stripe
+{
+	border-left: 3px solid #d84a38;
+}
+
+.m-btn.blue-stripe
+{
+	border-left: 3px solid #4d90fe;
+}
+
+.m-btn.purple-stripe
+{
+	border-left: 3px solid #852b99;
+}
+
+.m-btn.green-stripe
+{
+	border-left: 3px solid #35aa47;
+}
+
+/* Common button classes */
+.m-btn.red:active,
+.m-btn.red.active,
+.m-btn.red.disabled,
+.m-btn.red[disabled],
+.m-btn.blue:active,
+.m-btn.blue.active,
+.m-btn.blue.disabled,
+.m-btn.blue[disabled],
+.m-btn.purple:active,
+.m-btn.purple.active,
+.m-btn.purple.disabled,
+.m-btn.purple[disabled],
+.m-btn.green:active,
+.m-btn.green.active,
+.m-btn.green.disabled,
+.m-btn.green[disabled],
+.m-btn.black:active,
+.m-btn.black.active,
+.m-btn.black.disabled,
+.m-btn.black[disabled]
+{
+  -webkit-box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.25);
+  color: white !important;  
+}
+.m-btn.red.disabled,
+.m-btn.red[disabled],
+.m-btn.blue.disabled,
+.m-btn.blue[disabled],
+.m-btn.purple.disabled,
+.m-btn.purple[disabled],
+.m-btn.green.disabled,
+.m-btn.green[disabled]
+{
+	opacity: .7;
+}
+
+.m-btn.black.disabled,
+.m-btn.black[disabled]
+{
+	opacity: .5;
+}
+
+/*  Red */
+.m-btn.red {
+  color: white;  
+  text-shadow: none;	
+  background-color: #d84a38;
+  background-image: -moz-linear-gradient(top, #dd4b39, #d14836);
+  background-image: -ms-linear-gradient(top, #dd4b39, #d14836);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dd4b39), to(#d14836));
+  background-image: -webkit-linear-gradient(top, #dd4b39, #d14836);
+  background-image: -o-linear-gradient(top, #dd4b39, #d14836);
+  background-image: linear-gradient(top, #dd4b39, #d14836);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dd4b39', endColorstr='#d14836', GradientType=0);
+}
+.m-btn.red:hover, 
+.m-btn.red:focus, 
+.m-btn.red:active, 
+.m-btn.red.active,
+.m-btn.red[disabled], 
+.m-btn.red.disabled {    
+  background-color: #c53727;
+  background-image: -moz-linear-gradient(top, #c53727, #c53727);
+  background-image: -ms-linear-gradient(top, #c53727, #c53727);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#c53727), to(#c53727));
+  background-image: -webkit-linear-gradient(top, #c53727, #c53727);
+  background-image: -o-linear-gradient(top, #c53727, #c53727);
+  background-image: linear-gradient(top, #c53727, #c53727);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c53727', endColorstr='#c53727', GradientType=0); 
+}
+
+
+.m-btn.red:active,
+.m-btn.red.active
+{
+  background-color: #dd4b39;
+  background-image: -moz-linear-gradient(top, #dd4b39, #c53727);
+  background-image: -ms-linear-gradient(top, #dd4b39, #c53727);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dd4b39), to(#c53727));
+  background-image: -webkit-linear-gradient(top, #dd4b39, #c53727);
+  background-image: -o-lineark-gradient(top, #dd4b39, #c53727);
+  background-image: linear-gradient(top, #dd4b39, #c53727);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dd4b39', endColorstr='#c53727', GradientType=0);
+
+}
+
+/*  Blue */
+.m-btn.blue   
+{
+  color: white;  
+  text-shadow: none;	
+  background-color: #4d90fe;
+  background-image: -moz-linear-gradient(top, #4d90fe, #4787ed);
+  background-image: -ms-linear-gradient(top, #4d90fe, #4787ed);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4d90fe), to(#4787ed));
+  background-image: -webkit-linear-gradient(top, #4d90fe, #4787ed);
+  background-image: -o-linear-gradient(top, #4d90fe, #4787ed);
+  background-image: linear-gradient(top, #4d90fe, #4787ed);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4d90fe', endColorstr='#4787ed', GradientType=0);
+}
+.m-btn.blue:hover, 
+.m-btn.blue:focus, 
+.m-btn.blue:active,
+.m-btn.blue.active,
+.m-btn.blue[disabled],
+.m-btn.blue.disabled {  
+  background-color: #0072bb;
+  background-image: -moz-linear-gradient(top, #0072bb, #0072bb);
+  background-image: -ms-linear-gradient(top, #0072bb, #0072bb);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0072bb), to(#0072bb));
+  background-image: -webkit-linear-gradient(top, #0072bb, #0072bb);
+  background-image: -o-linear-gradient(top, #0072bb, #0072bb);
+  background-image: linear-gradient(top, #0072bb, #0072bb);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0072bb', endColorstr='#0072bb', GradientType=0);
+}
+
+.m-btn.blue:active,
+.m-btn.blue.active
+{
+  background-color: #4d90fe;
+  background-image: -moz-linear-gradient(top, #4d90fe, #0072bb);
+  background-image: -ms-linear-gradient(top, #4d90fe, #0072bb);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4d90fe), to(#0072bb));
+  background-image: -webkit-linear-gradient(top, #4d90fe, #0072bb);
+  background-image: -o-linear-gradient(top, #4d90fe, #0072bb);
+  background-image: linear-gradient(top, #4d90fe, #0072bb);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4d90fe', endColorstr='#0072bb', GradientType=0);
+
+}
+/*  Green */
+.m-btn.green {
+  color: white;
+  text-shadow: none;	 
+  background-color: #35aa47;
+  background-image: -moz-linear-gradient(top, #35aa47, #35aa47);
+  background-image: -ms-linear-gradient(top, #35aa47, #35aa47);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#35aa47), to(#35aa47));
+  background-image: -webkit-linear-gradient(top, #35aa47, #35aa47);
+  background-image: -o-linear-gradient(top, #35aa47, #35aa47);
+  background-image: linear-gradient(top, #35aa47, #35aa47);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#35aa47', endColorstr='#35aa47', GradientType=0);
+}
+.m-btn.green:hover, 
+.m-btn.green:focus, 
+.m-btn.green:active, 
+.m-btn.green.active,
+.m-btn.green.disabled, 
+.m-btn.green[disabled]{ 
+  background-color: #1d943b;
+  background-image: -moz-linear-gradient(top, #1d943b, #1d943b);
+  background-image: -ms-linear-gradient(top, #1d943b, #1d943b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1d943b), to(#1d943b));
+  background-image: -webkit-linear-gradient(top, #1d943b, #1d943b);
+  background-image: -o-linear-gradient(top, #1d943b, #1d943b);
+  background-image: linear-gradient(top, #1d943b, #1d943b);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1d943b', endColorstr='#1d943b', GradientType=0);
+}
+
+.m-btn.green:active,
+.m-btn.green.active
+{
+  background-color: #35aa47;
+  background-image: -moz-linear-gradient(top, #35aa47, #1d943b);
+  background-image: -ms-linear-gradient(top, #35aa47, #1d943b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#35aa47), to(#1d943b));
+  background-image: -webkit-linear-gradient(top, #35aa47, #1d943b);
+  background-image: -o-linear-gradient(top, #35aa47, #1d943b);
+  background-image: linear-gradient(top, #35aa47, #1d943b);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#35aa47', endColorstr='#1d943b', GradientType=0);
+
+}
+/*  Purple */
+.m-btn.purple {
+  color: white; 
+  text-shadow: none;	
+  background-color: #852b99;
+  background-image: -moz-linear-gradient(top, #852b99, #852b99);
+  background-image: -ms-linear-gradient(top, #852b99, #852b99);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#852b99), to(#852b99));
+  background-image: -webkit-linear-gradient(top, #852b99, #852b99);
+  background-image: -o-linear-gradient(top, #852b99, #852b99);
+  background-image: linear-gradient(top, #852b99, #852b99);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#852b99', endColorstr='#852b99', GradientType=0);
+}
+.m-btn.purple:hover, 
+.m-btn.purple:focus, 
+.m-btn.purple:active, 
+.m-btn.purple.active, 
+.m-btn.purple.disabled,
+.m-btn.purple[disabled] { 
+  background-color: #6d1b81;
+  background-image: -moz-linear-gradient(top, #6d1b81, #6d1b81);
+  background-image: -ms-linear-gradient(top, #6d1b81, #6d1b81);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6d1b81), to(#6d1b81));
+  background-image: -webkit-linear-gradient(top, #6d1b81, #6d1b81);
+  background-image: -o-linear-gradient(top, #6d1b81, #6d1b81);
+  background-image: linear-gradient(top, #6d1b81, #6d1b81);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6d1b81', endColorstr='#6d1b81', GradientType=0);
+}
+
+.m-btn.purple:active,
+.m-btn.purple.active
+{
+  background-color: #35aa47;
+  background-image: -moz-linear-gradient(top, #852b99, #6d1b81);
+  background-image: -ms-linear-gradient(top, #852b99, #6d1b81);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#852b99), to(#6d1b81));
+  background-image: -webkit-linear-gradient(top, #852b99, #6d1b81);
+  background-image: -o-linear-gradient(top, #852b99, #6d1b81);
+  background-image: linear-gradient(top, #852b99, #6d1b81);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#852b99', endColorstr='#6d1b81', GradientType=0);
+
+}
+
+
+.m-btn.black {
+  color: white; 
+  text-shadow: none;	
+  background-color: #555555;
+  background-image: -moz-linear-gradient(top, #555555, #555555);
+  background-image: -ms-linear-gradient(top, #555555, #555555);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#555555), to(#555555));
+  background-image: -webkit-linear-gradient(top, #555555, #555555);
+  background-image: -o-linear-gradient(top, #555555, #555555);
+  background-image: linear-gradient(top, #555555, #555555);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#555555', endColorstr='#555555', GradientType=0);
+}
+.m-btn.black:hover, 
+.m-btn.black:focus, 
+.m-btn.black:active, 
+.m-btn.black.active, 
+.m-btn.black.disabled,
+.m-btn.black[disabled] { 
+  background-color: #222222;
+  background-image: -moz-linear-gradient(top, #222222, #222222);
+  background-image: -ms-linear-gradient(top, #222222, #222222);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#222222));
+  background-image: -webkit-linear-gradient(top, #222222, #222222);
+  background-image: -o-linear-gradient(top, #222222, #222222);
+  background-image: linear-gradient(top, #222222, #222222);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#222222', endColorstr='#222222', GradientType=0);
+}
+
+.m-btn.black:active,
+.m-btn.black.active
+{
+  background-color: #222222;
+  background-image: -moz-linear-gradient(top, #444444, #222222);
+  background-image: -ms-linear-gradient(top, #444444, #222222);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#222222));
+  background-image: -webkit-linear-gradient(top, #444444, #222222);
+  background-image: -o-linear-gradient(top, #444444, #222222);
+  background-image: linear-gradient(top, #444444, #222222);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#444444', endColorstr='#222222', GradientType=0);
+
+}
+/*  Mini-button */
+.sm {
+  font-size: 11px;
+}
+.mini 
+{
+  height: 13px;
+  font-size: 11px;  
+  line-height: 13px;
+  padding: 4px 10px;
+}
+.big
+{
+	height: 38px;
+	font-size: 18px; 
+	line-height: 38px; 	
+	padding: 20px 26px;
+}
+
+.rnd
+{
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.big.rnd
+{
+    -webkit-border-radius: 11px;
+    -moz-border-radius: 11px;
+    border-radius: 11px;
+}
+
+/*  Disabled */
+.m-btn.disabled, .m-btn[disabled] {
+  color: #999999;  
+  background-color: #f5f5f5;
+  background-image: -moz-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: -ms-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#dddddd));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: -o-linear-gradient(top, #eeeeee, #dddddd);
+  background-image: linear-gradient(top, #eeeeee, #dddddd);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);      
+  cursor: default;
+  -webkit-box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.25);
+}
+/*  Misc */
+.m-btn.icn-only {
+  min-width: 14px;
+}
+.m-btn.bigicn-only {
+  min-width: 34px;
+}
+.m-btn-group {
+  position: relative;
+  display: inline-block;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  /* IE hacks */
+
+  zoom: 1;
+  *display: inline;
+}
+.m-btn + .m-btn,
+.m-btn + .m-btn-group,
+.m-btn-group + .m-btn,
+.m-btn-group + .m-btn-group {
+  margin-left: 15px; 
+}
+
+.m-btn.dropdown-carettoggle {
+  min-width: 5px;
+  height: 18px;
+  padding: 8px;
+}
+.m-btn.dropdown-carettoggle > .caret {
+  margin-top: 8px;
+}
+.m-btn.caret:hover {
+  opacity: 1;
+}
+
+.m-btn-group .m-btn {
+  position: relative;
+  float: left;
+  margin-left: -1px; 
+}
+
+.m-btn-group .m-btn:first-child {
+  margin-left: 0;
+}
+
+.m-btn-group .m-btn.rnd:first-child {
+    -webkit-border-radius: 5px 0 0 5px;
+    -moz-border-radius: 5px 0 0 5px;
+    border-radius: 5px 0 0 5px;
+}
+
+.m-btn-group .m-btn.rnd.dropdown-carettoggle {
+    -webkit-border-radius: 0 5px 5px 0;
+    -moz-border-radius: 0 5px 5px 0;
+   
