--- a/PlaylistPresentationServeur/WebContent/CSS/myCSS.css
+++ b/PlaylistPresentationServeur/WebContent/CSS/myCSS.css
@@ -7,6 +7,15 @@ Login page
 	background-color:black;
 	border-color:black;
 	border:0;
+	color:#CFCFCF;
+	font-size:12px;
+}
+
+a:hover {
+	 text-decoration:none; 
+}
+
+.navbarSelected {
 	color:white;
 }
 
